--- a/buckets/bucket1/bucket.yaml
+++ b/buckets/bucket1/bucket.yaml
@@ -1,7 +1,7 @@
 apiVersion: s3.aws.upbound.io/v1beta1
 kind: Bucket
 metadata:
-  name: bucket1
+  name: crossplane-bucket1-example
 spec:
   forProvider:
     region: ap-southeast-2
