changed to application

--- a/templates/bucket.yaml
+++ b/templates/bucket.yaml
@@ -3,14 +3,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: my-app
+  name: {{ $bucket.name }}
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/azaurus1/gitops-crossplane-example
     targetRevision: HEAD
-    path: buckets/{{$bucket.name}}/bucket.yaml
+    path: buckets/{{$bucket.name}}
   destination:
     server: https://kubernetes.default.svc
     namespace: default
