--- a/templates/bucket.yaml
+++ b/templates/bucket.yaml
@@ -9,7 +9,7 @@ spec:
   source:
     repoURL: https://github.com/azaurus1/gitops-crossplane-example
     targetRevision: HEAD
-    path: buckets/{{$bucket.name}}
+    path: buckets/{{$bucket.name}}/bucket.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: default
